--- a/t3/table.html
+++ b/t3/table.html
@@ -19,8 +19,8 @@
 	<script src="module/btn.js"></script>
 </head>
 <body>
-	<div id="table-box">
-		<ul class="table-nav" data-module="nav">
+	<div id="table-box" data-module="nav">
+		<ul class="table-nav">
 			<li class="active-btn" data-type="nav-li">table1</li>
 			<li data-type="nav-li">table2</li>
 			<li data-type="nav-li">table3</li>
