--- a/t3/table.html
+++ b/t3/table.html
@@ -25,9 +25,9 @@
 			<li data-type="nav-li">table2</li>
 			<li data-type="nav-li">table3</li>
 		</ul>
-		<div class="table-cont active">table 1 content</div>
-		<div class="table-cont">table 2 content</div>
-		<div class="table-cont">table 3 content</div>
+		<div class="table-cont active" data-type="box">table 1 content</div>
+		<div class="table-cont" data-type="box">table 2 content</div>
+		<div class="table-cont" data-type="box">table 3 content</div>
 	</div>
 
 	<div id="table-btn" data-module="btn">
