--- a/backbone/backboneDemo.html
+++ b/backbone/backboneDemo.html
@@ -20,5 +20,12 @@
 </head>
 <body>
 	<div id="wrapper"></div>
+	<script>
+		var m = new Backbone.Model({
+			initilize: function(name) {
+				this.set(name);
+			}
+		})
+	</script>
 </body>
 </html>
